<resources>
    <string name="app_name">BloodBank</string>
    <string name="logo">Donate blood, Save life</string>
    <string name="word1">REGISTER</string>
    <string name="word2">LOGIN</string>
    <string name="word3">OR</string>
    <string name="word4">Name</string>
    <string name="word5">ex@test.com</string>
    <string name="word6">Location</string>
    <string name="word7">****</string>
    <string name="word8">Blood Group</string>
    <string name="word9">Already signed in?</string>
    <string name="word10">Forgot password</string>
    <string name="bottom1">Profile</string>
    <string name="bottom2">Hospital</string>
    <string name="bottom3">Request</string>
    <string name="bottom4">Appointment</string>
    <string name="bottom5">Home</string>
    <string name="bottom6">Notification</string>
    <string name="linktosite">
        <a href="https://www.journalducameroun.com/en/cameroon-yaounde-central-hospital-blood-bank-receives-certification">
            Learn more about blood donation process and vonlunteer to be a hero. </a>
    </string>
    <string name="linktosite2">
        <a href="https://cameroonnewsagency.com/hero-cameroon-collects-100-litres-of-blood-boost-blood-bank">
            Be a hero today. Your blood can save at least three lives</a>
    </string>
    <string name="more">
        <a href="https://www.who.int/news-room/events/detail/2020/06/14/default-calendar/world-blood-donor-day-2020">
            see more</a>
    </string>
    <string name="person1">Jane Doe</string>
    <string name="welcome">Welcome,</string>
    <string name="text">Your blood can save lives checkout the notifications to donate today</string>
    <string name="book">Start Today</string>
    <string name="card1">Countdown</string>
    <string name="card2">Days till you can donate again</string>
    <string name="appointment">Book appointment</string>
    <string name="appoint">No appointment yet</string>
    <string name="info1">About donating blood </string>
   <string name="info2"> Find out if you are eligible and the process</string>
    <string name="info3">About bloodbank services</string>
    <string name="info4">Learn more about us</string>
    <string name="info5">Need help or simply want to get in touch</string>
    <string name="days">Days until donation</string>
    <string name="assistant">Assistant</string>
</resources>
