<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/bottom1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_hospital"
        android:enabled="true"
        android:icon="@drawable/hospital"
        android:title="@string/bottom2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_request"
        android:enabled="true"
        android:icon="@drawable/request"
        android:title="@string/bottom3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/bottom4"
        app:showAsAction="ifRoom" />

</menu>